...
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account? <b><u>Sign in here.</u></b></string>
    <string name="dont_have_account">Don\'t have an account? <b><u>Create one.</u></b></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="success">Success!</string>
...
    <string name="uploading">Uploading…</string>

    <string name="facebook_app_id">781120082085760</string>
    <string name="share_image">Share image.</string>
    <string name="there_are_no_uploaded_images_be_the_first_to_upload">There are no uploaded images, be the first to upload!</string>
    <string name="add_comment">Add comment&#8230;</string>
    <string name="just_posted">Just posted</string>
    <string name="sure_you_want_to_quit">Are you sure you want to quit application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_result_found">No result found!</string>
    <string name="you_are_not_subscribed_on_any_event">You are not subscribed on any event!</string>
    <string name="delete_comment_message">Do you really want to delete this comment?</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed_events">Subscribed events</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="undo">Undo</string>
    <string name="event_restored">Event is restored!</string>
    <string name="food">Food</string>
...
    <string name="show_map">Show Map</string>
    <string name="hide_map">Hide Map</string>
    <string name="restaurants">Restaurants</string>
    <string name="bars">Bars</string>
    <string name="cafe">Cafe</string>
    <string name="type_of_places">Type of places</string>
    <string name="time_format">%sh - %sh</string>
    <string name="room_a">Room A – Lipa</string>
    <string name="room_b">Room B – Kesten</string>
    <string name="restaurant">Restaurant</string>
    <string name="hall_1st">Hall – 1st fl.</string>
    <string name="no_comments">There are no comments on this event, be the first one to comment!</string>
    <string name="search_radius">Change search radius - (%dm)</string>
    <string name="topic_starting_in_fifteen_minutes">Topic is starting in 15 minutes!</string>
    <string name="no_email_error">Please enter email to proceed!</string>
    <string name="no_password_error">Please enter password to proceed!</string>
    <string name="no_name_error">Please enter name to proceed!</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="forgot_password_message">Forgot password?\nSubmit your email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="password_reset_instructions">Password reset instructions sent to email!</string>
    <string name="email_not_found">Email not found!</string>
    <string name="skip_login">Skip login</string>
    <string name="only_for_logged_in">Only for logged in users!</string>
    <string name="guest">Guest</string>
    <string name="empty" />
    <string name="we_are_sorry">We\'re Sorry</string>
    <string name="error_check_internet_connection">There was an error loading your content. Please check your internet connection and try again.</string>
    <string name="error_check_internet_connection_maps">There was an error loading content for Google Maps. Please check your internet connection and try again. Or continue without Google Places. </string>
    <string name="show_notifications">Show notifications</string>
...
    <string name="ferit_organized_and_sponsored">Organized and sponsored by the Faculty of Electrical Engineering, Computer Science and Information Technology Osijek, J. J. Strossmayer University of Osijek</string>
    <string name="display_name">Display Name</string>
    <string name="museum">Museum</string>
    <string name="church">Church</string>
    <string name="library">Library</string>
    <string name="zoo">Zoo</string>
    <string name="subscribed">Subscribed!</string>

    <array name="conference_dates">
        <item>18 October 2017</item>
        <item>19 October 2017</item>
        <item>20 October 2017</item>
    </array>
...
