...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/topic_lecturers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textColor="@color/button_blue"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topic_container"
        android:layout_above="@+id/comment_container"
        android:layout_marginTop="5dp"/>

...
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:text="@string/no_comments"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/material_blue"
        android:src="@drawable/ic_comment"
...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/add_comment"
            android:maxLines="1"
            android:inputType="text"
            android:padding="15dp"/>
...
