...
    <RelativeLayout
        android:id="@+id/action_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <com.example.karlo.sstconference.ui.SearchBarView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/toolbar"
            app:hintText="@string/search"
            android:visibility="gone"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:layout_below="@+id/action_bar_container"
        android:id="@+id/searchListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/no_result"
        android:layout_width="wrap_content"
...
        android:textColor="@color/divider_grey"
        android:textSize="20sp"
        android:text="@string/no_result_found"
        android:visibility="gone"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"/>
</RelativeLayout>
