...
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_search"/>

    <ImageView
        tools:ignore="ContentDescription"
        android:id="@+id/search_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
...
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="invisible"
        android:src="@drawable/search_close_icon"/>

    <EditText
        android:id="@+id/search_edit_text"
        android:imeOptions="actionSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/white"
...
